# calendarust

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  input.rs  main.rs
src/models/: config.rs  event.rs
src/storage/: db.rs
src/ui/: day.rs  event_form.rs  mod.rs  month.rs  style.rs  week.rs  year.rs
