[package]
name = "calendar-app"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
anyhow = "1.0"
tui-textarea = { version = "0.7.0", features = ["crossterm"] }
